Add splash screen and fix some issues against page transmit

--- a/pricechecker-frontend/user/authorized/home.html
+++ b/pricechecker-frontend/user/authorized/home.html
@@ -25,6 +25,9 @@
     <link rel="stylesheet" href="/pricechecker-frontend/user/assets/css/theme.css">
     <!--    customized style-->
     <link rel="stylesheet" href="/pricechecker-frontend/user/assets/css/custom.css">
+    <!-- Preloader CSS
+   ============================================ -->
+    <link rel="stylesheet" href="assets/css/preloader-style.css">
 </head>
 
 <body>
@@ -68,6 +71,9 @@
 
             </div>
         </div>
+    </div>
+    <div id="user-preloading" class="row my-loading">
+        loading
     </div>
 </main>
 <!-- ========== END MAIN CONTENT ========== -->
