--- a/pricechecker-frontend/user/contact.html
+++ b/pricechecker-frontend/user/contact.html
@@ -9,23 +9,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/pricechecker-frontend/favicon.png">
+    <link rel="shortcut icon" href="favicon.png">
 
     <!-- CSS Implementing Plugins -->
-    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/vendor/font-awesome/css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/css/font-electro.css">
+    <link rel="stylesheet" href="assets/vendor/font-awesome/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/css/font-electro.css">
 
-    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/vendor/animate.css/animate.min.css">
-    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/vendor/hs-megamenu/src/hs.megamenu.css">
-    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/vendor/ion-rangeslider/css/ion.rangeSlider.css">
-    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
-    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/vendor/fancybox/jquery.fancybox.css">
-    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/vendor/slick-carousel/slick/slick.css">
-    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="assets/vendor/animate.css/animate.min.css">
+    <link rel="stylesheet" href="assets/vendor/hs-megamenu/src/hs.megamenu.css">
+    <link rel="stylesheet" href="assets/vendor/ion-rangeslider/css/ion.rangeSlider.css">
+    <link rel="stylesheet" href="assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
+    <link rel="stylesheet" href="assets/vendor/fancybox/jquery.fancybox.css">
+    <link rel="stylesheet" href="assets/vendor/slick-carousel/slick/slick.css">
+    <link rel="stylesheet" href="assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css">
 
     <!-- CSS Electro Template -->
-    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/css/theme.css">
-    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
 </head>
 
 <body>
@@ -115,74 +115,74 @@
                     price checker ,
                     software developer team,
                     US
-                    <div class="">Support(+000)123 456 789</div>
-                    <div class="">Email: <a class="text-blue text-decoration-on" href="mailto:contact@yourstore.com">info@software.com</a></div>
+                    <div class="">Support(+800) 856 800 604</div>
+                    <div class="">Email: <a class="text-blue text-decoration-on" href="mailto:contact@yourstore.com">pricechecker@electro.com</a></div>
                 </address>
                 <h5 class="font-size-14 font-weight-bold mb-3">Opening Hours</h5>
                 <div class="">Monday to Friday: 9am-9pm</div>
                 <div class="mb-6">Saturday to Sunday: 9am-11pm</div>
                 <h5 class="font-size-14 font-weight-bold mb-3">Careers</h5>
-                <p class="text-gray-90">If you’re interested in employment opportunities at Software Developer Team, please email us: <a class="text-blue text-decoration-on" href="mailto:contact@software.com">contact@yourstore.com</a></p>
+                <p class="text-gray-90">If you’re interested in employment opportunities at Software Developer Team, please email us: <a class="text-blue text-decoration-on" href="mailto:contact@software.com">pricechecker@electro.com</a></p>
             </div>
         </div>
         <!-- Brand Carousel -->
-        <div class="mb-8">
-            <div class="py-2 border-top border-bottom">
-                <div class="js-slick-carousel u-slick my-1"
-                     data-slides-show="5"
-                     data-slides-scroll="1"
-                     data-arrows-classes="d-none d-lg-inline-block u-slick__arrow-normal u-slick__arrow-centered--y"
-                     data-arrow-left-classes="fa fa-angle-left u-slick__arrow-classic-inner--left z-index-9"
-                     data-arrow-right-classes="fa fa-angle-right u-slick__arrow-classic-inner--right"
-                     data-responsive='[{
-                                "breakpoint": 992,
-                                "settings": {
-                                    "slidesToShow": 2
-                                }
-                            }, {
-                                "breakpoint": 768,
-                                "settings": {
-                                    "slidesToShow": 1
-                                }
-                            }, {
-                                "breakpoint": 554,
-                                "settings": {
-                                    "slidesToShow": 1
-                                }
-                            }]'>
-                    <div class="js-slide">
-                        <a href="#" class="link-hover__brand">
-                            <img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img1.png" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="js-slide">
-                        <a href="#" class="link-hover__brand">
-                            <img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img2.png" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="js-slide">
-                        <a href="#" class="link-hover__brand">
-                            <img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img3.png" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="js-slide">
-                        <a href="#" class="link-hover__brand">
-                            <img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img4.png" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="js-slide">
-                        <a href="#" class="link-hover__brand">
-                            <img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img5.png" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="js-slide">
-                        <a href="#" class="link-hover__brand">
-                            <img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img6.png" alt="Image Description">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!--<div class="mb-8">-->
+            <!--<div class="py-2 border-top border-bottom">-->
+                <!--<div class="js-slick-carousel u-slick my-1"-->
+                     <!--data-slides-show="5"-->
+                     <!--data-slides-scroll="1"-->
+                     <!--data-arrows-classes="d-none d-lg-inline-block u-slick__arrow-normal u-slick__arrow-centered&#45;&#45;y"-->
+                     <!--data-arrow-left-classes="fa fa-angle-left u-slick__arrow-classic-inner&#45;&#45;left z-index-9"-->
+                     <!--data-arrow-right-classes="fa fa-angle-right u-slick__arrow-classic-inner&#45;&#45;right"-->
+                     <!--data-responsive='[{-->
+                                <!--"breakpoint": 992,-->
+                                <!--"settings": {-->
+                                    <!--"slidesToShow": 2-->
+                                <!--}-->
+                            <!--}, {-->
+                                <!--"breakpoint": 768,-->
+                                <!--"settings": {-->
+                                    <!--"slidesToShow": 1-->
+                                <!--}-->
+                            <!--}, {-->
+                                <!--"breakpoint": 554,-->
+                                <!--"settings": {-->
+                                    <!--"slidesToShow": 1-->
+                                <!--}-->
+                            <!--}]'>-->
+                    <!--<div class="js-slide">-->
+                        <!--<a href="#" class="link-hover__brand">-->
+                            <!--<img class="img-fluid m-auto max-height-50" src="images/200X60/1.png" alt="Image Description">-->
+                        <!--</a>-->
+                    <!--</div>-->
+                    <!--<div class="js-slide">-->
+                        <!--<a href="#" class="link-hover__brand">-->
+                            <!--<img class="img-fluid m-auto max-height-50" src="images/200X60/2.png" alt="Image Description">-->
+                        <!--</a>-->
+                    <!--</div>-->
+                    <!--<div class="js-slide">-->
+                        <!--<a href="#" class="link-hover__brand">-->
+                            <!--<img class="img-fluid m-auto max-height-50" src="images/200X60/3.png" alt="Image Description">-->
+                        <!--</a>-->
+                    <!--</div>-->
+                    <!--<div class="js-slide">-->
+                        <!--<a href="#" class="link-hover__brand">-->
+                            <!--<img class="img-fluid m-auto max-height-50" src="images/200X60/4.png" alt="Image Description">-->
+                        <!--</a>-->
+                    <!--</div>-->
+                    <!--<div class="js-slide">-->
+                        <!--<a href="#" class="link-hover__brand">-->
+                            <!--<img class="img-fluid m-auto max-height-50" src="images/200X60/5.png" alt="Image Description">-->
+                        <!--</a>-->
+                    <!--</div>-->
+                    <!--<div class="js-slide">-->
+                        <!--<a href="#" class="link-hover__brand">-->
+                            <!--<img class="img-fluid m-auto max-height-50" src="images/200X60/1.jpg" alt="Image Description">-->
+                        <!--</a>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
         <!-- End Brand Carousel -->
     </div>
 </main>
@@ -206,46 +206,46 @@
 <!-- End Go to Top -->
 
 <!-- JS Global Compulsory -->
-<script src="/pricechecker-frontend/user/assets/vendor/jquery/dist/jquery.min.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/jquery-migrate/dist/jquery-migrate.min.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/popper.js/dist/umd/popper.min.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/bootstrap/bootstrap.min.js"></script>
+<script src="assets/vendor/jquery/dist/jquery.min.js"></script>
+<script src="assets/vendor/jquery-migrate/dist/jquery-migrate.min.js"></script>
+<script src="assets/vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src="assets/vendor/bootstrap/bootstrap.min.js"></script>
 
 <!-- JS Implementing Plugins -->
-<script src="/pricechecker-frontend/user/assets/vendor/appear.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/jquery.countdown.min.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/svg-injector/dist/svg-injector.min.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/fancybox/jquery.fancybox.min.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/typed.js/lib/typed.min.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/slick-carousel/slick/slick.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/appear.js"></script>
-<script src="/pricechecker-frontend/user/assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+<script src="assets/vendor/appear.js"></script>
+<script src="assets/vendor/jquery.countdown.min.js"></script>
+<script src="assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
+<script src="assets/vendor/svg-injector/dist/svg-injector.min.js"></script>
+<script src="assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+<script src="assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="assets/vendor/fancybox/jquery.fancybox.min.js"></script>
+<script src="assets/vendor/ion-rangeslider/js/ion.rangeSlider.min.js"></script>
+<script src="assets/vendor/typed.js/lib/typed.min.js"></script>
+<script src="assets/vendor/slick-carousel/slick/slick.js"></script>
+<script src="assets/vendor/appear.js"></script>
+<script src="assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 
 <!-- JS Electro -->
-<script src="/pricechecker-frontend/user/assets/js/hs.core.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.countdown.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.header.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.hamburgers.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.unfold.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.focus-state.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.malihu-scrollbar.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.validation.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.fancybox.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.onscroll-animation.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.slick-carousel.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.quantity-counter.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.range-slider.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.show-animation.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.svg-injector.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.scroll-nav.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.go-to.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/components/hs.selectpicker.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/myjs/common.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/myjs/base.js"></script>
-<script src="/pricechecker-frontend/user/assets/js/myjs/send-mail.js"></script>
+<script src="assets/js/hs.core.js"></script>
+<script src="assets/js/components/hs.countdown.js"></script>
+<script src="assets/js/components/hs.header.js"></script>
+<script src="assets/js/components/hs.hamburgers.js"></script>
+<script src="assets/js/components/hs.unfold.js"></script>
+<script src="assets/js/components/hs.focus-state.js"></script>
+<script src="assets/js/components/hs.malihu-scrollbar.js"></script>
+<script src="assets/js/components/hs.validation.js"></script>
+<script src="assets/js/components/hs.fancybox.js"></script>
+<script src="assets/js/components/hs.onscroll-animation.js"></script>
+<script src="assets/js/components/hs.slick-carousel.js"></script>
+<script src="assets/js/components/hs.quantity-counter.js"></script>
+<script src="assets/js/components/hs.range-slider.js"></script>
+<script src="assets/js/components/hs.show-animation.js"></script>
+<script src="assets/js/components/hs.svg-injector.js"></script>
+<script src="assets/js/components/hs.scroll-nav.js"></script>
+<script src="assets/js/components/hs.go-to.js"></script>
+<script src="assets/js/components/hs.selectpicker.js"></script>
+<script src="assets/js/myjs/common.js"></script>
+<script src="assets/js/myjs/base.js"></script>
+<script src="assets/js/myjs/send-mail.js"></script>
 </body>
 </html>
