--- a/pricechecker-frontend/user/compare.html
+++ b/pricechecker-frontend/user/compare.html
@@ -25,6 +25,9 @@
 		<link rel="stylesheet" href="/pricechecker-frontend/user/assets/css/theme.css">
 		<!--    customized style-->
 		<link rel="stylesheet" href="/pricechecker-frontend/user/assets/css/custom.css">
+		<!-- Preloader CSS
+   ============================================ -->
+		<link rel="stylesheet" href="assets/css/preloader-style.css">
 	</head>
 	<body>
 		<header></header>
@@ -150,6 +153,9 @@
 				</div>
 			</div>
 			<div id="popular-products-container" class="container"></div>
+			<div id="user-preloading" class="row my-loading">
+				loading
+			</div>
 		</main>
 		<!-- ========== END MAIN CONTENT ========== -->
 		<!-- Go to Top -->
