--- a/pricechecker-frontend/user/about.html
+++ b/pricechecker-frontend/user/about.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/pricechecker-frontend/favicon.png">
+    <link rel="shortcut icon" href="favicon.png">
 
     <!-- CSS Implementing Plugins -->
     <link rel="stylesheet" href="/pricechecker-frontend/user/assets/vendor/font-awesome/css/fontawesome-all.min.css">
@@ -25,19 +25,21 @@
 
     <!-- CSS Electro Template -->
     <link rel="stylesheet" href="/pricechecker-frontend/user/assets/css/theme.css">
+    <!--    customized style-->
+    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/css/custom.css">
 </head>
 
 <body>
 
 <!-- ========== HEADER ========== -->
-<header id="header" class="u-header u-header-left-aligned-nav">
+<header class="u-header u-header-left-aligned-nav">
 
 </header>
 <!-- ========== END HEADER ========== -->
 
 <!-- ========== MAIN CONTENT ========== -->
 <main id="content" role="main">
-    <div class="bg-img-hero mb-14" style="background-image: url(/pricechecker-frontend/user/images/img2.jpg);">
+    <div class="bg-img-hero mb-14" style="background-image: url(/pricechecker-frontend/user/images/carousel/carousel7.png);">
         <div class="container">
             <div class="flex-content-center max-width-620-lg flex-column mx-auto text-center min-height-564">
                 <h1 class="h1 font-weight-bold">About PriceChecker</h1>
@@ -79,67 +81,67 @@
             </div>
         </div>
     </div>
-    <div class="container mb-8 mb-lg-0">
-        <!-- Brand Carousel -->
-        <div class="mb-8">
-            <div class="py-2 border-top border-bottom">
-                <div class="js-slick-carousel u-slick my-1"
-                     data-slides-show="5"
-                     data-slides-scroll="1"
-                     data-arrows-classes="d-none d-lg-inline-block u-slick__arrow-normal u-slick__arrow-centered--y"
-                     data-arrow-left-classes="fa fa-angle-left u-slick__arrow-classic-inner--left z-index-9"
-                     data-arrow-right-classes="fa fa-angle-right u-slick__arrow-classic-inner--right"
-                     data-responsive='[{
-                                "breakpoint": 992,
-                                "settings": {
-                                    "slidesToShow": 2
-                                }
-                            }, {
-                                "breakpoint": 768,
-                                "settings": {
-                                    "slidesToShow": 1
-                                }
-                            }, {
-                                "breakpoint": 554,
-                                "settings": {
-                                    "slidesToShow": 1
-                                }
-                            }]'>
-                    <div class="js-slide">
-                        <a href="#" class="link-hover__brand">
-                            <img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img1.png" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="js-slide">
-                        <a href="#" class="link-hover__brand">
-                            <img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img2.png" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="js-slide">
-                        <a href="#" class="link-hover__brand">
-                            <img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img3.png" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="js-slide">
-                        <a href="#" class="link-hover__brand">
-                            <img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img4.png" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="js-slide">
-                        <a href="#" class="link-hover__brand">
-                            <img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img5.png" alt="Image Description">
-                        </a>
-                    </div>
-                    <div class="js-slide">
-                        <a href="#" class="link-hover__brand">
-                            <img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img6.png" alt="Image Description">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Brand Carousel -->
-    </div>
+    <!--<div class="container mb-8 mb-lg-0">-->
+        <!--&lt;!&ndash; Brand Carousel &ndash;&gt;-->
+        <!--<div class="mb-8">-->
+            <!--<div class="py-2 border-top border-bottom">-->
+                <!--<div class="js-slick-carousel u-slick my-1"-->
+                     <!--data-slides-show="5"-->
+                     <!--data-slides-scroll="1"-->
+                     <!--data-arrows-classes="d-none d-lg-inline-block u-slick__arrow-normal u-slick__arrow-centered&#45;&#45;y"-->
+                     <!--data-arrow-left-classes="fa fa-angle-left u-slick__arrow-classic-inner&#45;&#45;left z-index-9"-->
+                     <!--data-arrow-right-classes="fa fa-angle-right u-slick__arrow-classic-inner&#45;&#45;right"-->
+                     <!--data-responsive='[{-->
+                                <!--"breakpoint": 992,-->
+                                <!--"settings": {-->
+                                    <!--"slidesToShow": 2-->
+                                <!--}-->
+                            <!--}, {-->
+                                <!--"breakpoint": 768,-->
+                                <!--"settings": {-->
+                                    <!--"slidesToShow": 1-->
+                                <!--}-->
+                            <!--}, {-->
+                                <!--"breakpoint": 554,-->
+                                <!--"settings": {-->
+                                    <!--"slidesToShow": 1-->
+                                <!--}-->
+                            <!--}]'>-->
+                    <!--<div class="js-slide">-->
+                        <!--<a href="#" class="link-hover__brand">-->
+                            <!--<img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img1.png" alt="Image Description">-->
+                        <!--</a>-->
+                    <!--</div>-->
+                    <!--<div class="js-slide">-->
+                        <!--<a href="#" class="link-hover__brand">-->
+                            <!--<img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img2.png" alt="Image Description">-->
+                        <!--</a>-->
+                    <!--</div>-->
+                    <!--<div class="js-slide">-->
+                        <!--<a href="#" class="link-hover__brand">-->
+                            <!--<img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img3.png" alt="Image Description">-->
+                        <!--</a>-->
+                    <!--</div>-->
+                    <!--<div class="js-slide">-->
+                        <!--<a href="#" class="link-hover__brand">-->
+                            <!--<img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img4.png" alt="Image Description">-->
+                        <!--</a>-->
+                    <!--</div>-->
+                    <!--<div class="js-slide">-->
+                        <!--<a href="#" class="link-hover__brand">-->
+                            <!--<img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img5.png" alt="Image Description">-->
+                        <!--</a>-->
+                    <!--</div>-->
+                    <!--<div class="js-slide">-->
+                        <!--<a href="#" class="link-hover__brand">-->
+                            <!--<img class="img-fluid m-auto max-height-50" src="/pricechecker-frontend/user/assets/img/200X60/img6.png" alt="Image Description">-->
+                        <!--</a>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--&lt;!&ndash; End Brand Carousel &ndash;&gt;-->
+    <!--</div>-->
 </main>
 <!-- ========== END MAIN CONTENT ========== -->
 
