--- a/pricechecker-frontend/user/authorized/home.html
+++ b/pricechecker-frontend/user/authorized/home.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="/pricechecker-frontend/user/assets/css/custom.css">
     <!-- Preloader CSS
    ============================================ -->
-    <link rel="stylesheet" href="assets/css/preloader-style.css">
+    <link rel="stylesheet" href="../assets/css/preloader-style.css">
 </head>
 
 <body>
