--- a/pricechecker-frontend/user/authorized/user-profile.html
+++ b/pricechecker-frontend/user/authorized/user-profile.html
@@ -24,12 +24,14 @@
 
     <!-- CSS Electro Template -->
     <link rel="stylesheet" href="/pricechecker-frontend/user/assets/css/theme.css">
+    <!--    customized style-->
+    <link rel="stylesheet" href="/pricechecker-frontend/user/assets/css/custom.css">
 </head>
 
 <body>
 
 <!-- ========== HEADER ========== -->
-<header id="header" class="u-header u-header-left-aligned-nav">
+<header class="u-header u-header-left-aligned-nav">
 </header>
 <!-- ========== END HEADER ========== -->
 
