--- a/pricechecker-frontend/user/compare.html
+++ b/pricechecker-frontend/user/compare.html
@@ -30,7 +30,7 @@
 		<link rel="stylesheet" href="assets/css/preloader-style.css">
 	</head>
 	<body>
-		<header></header>
+	<header class="u-header u-header-left-aligned-nav"></header>
 		<!--	content for comparing-->
 		<main id="content" role="main">
 			<div class="container">
