--- a/pricechecker-frontend/user/authorized/visited-product.html
+++ b/pricechecker-frontend/user/authorized/visited-product.html
@@ -28,7 +28,7 @@
 
 </head>
 <body>
-<header>
+<header class="u-header u-header-left-aligned-nav">
 </header>
 <div id="table-container" class="container">
     <h2>Recent Visited Products Table</h2>
