--- a/pricechecker-frontend/user/index.html
+++ b/pricechecker-frontend/user/index.html
@@ -153,11 +153,11 @@
                         <div class="carousel-controls">
                             <ol class="carousel-indicators">
                                 <li data-target="#carousel" data-slide-to="0"
-                                    style="background-image: url(images/iphone_apple/1.png);"></li>
+                                    style="background-image: url(images/carousel/carousel2.png);"></li>
                                 <li data-target="#carousel" data-slide-to="1"
-                                    style="background-image: url(images/laptop/1.jpg);"></li>
+                                    style="background-image: url(images/carousel/carousel5.png);"></li>
                                 <li data-target="#carousel" data-slide-to="2"
-                                    style="background-image: url(images/panasonic_TV/1.png);"></li>
+                                    style="background-image: url(images/carousel/carousel7.png);"></li>
                             </ol>
 
                             <a class="carousel-control-prev" role="button" data-slide="prev" href="#carousel">
@@ -172,22 +172,22 @@
                         <div class="carousel-inner" style="height: 400px;">
                             <div class="carousel-item active" style="background-image: url(images/carousel/carousel2.png);background-size: cover;">
                                 <div class="container">
-                                    <h2>The best iphone with best price</h2>
-                                    <p>Iphone</p>
+                                    <!--<h2>The best iphone with best price</h2>-->
+                                    <!--<p>Iphone</p>-->
                                 </div>
                             </div>
 
                             <div class="carousel-item" style="background-image: url(images/carousel/carousel5.png);">
                                 <div class="container">
-                                    <h2>The best laptop with best price</h2>
-                                    <p>Laptop</p>
+                                    <!--<h2>The best laptop with best price</h2>-->
+                                    <!--<p>Laptop</p>-->
                                 </div>
                             </div>
 
                             <div class="carousel-item" style="background-image: url(images/carousel/carousel7.png);">
                                 <div class="container">
-                                    <h2>The best TV with best price</h2>
-                                    <p>TV</p>
+                                    <!--<h2>The best TV with best price</h2>-->
+                                    <!--<p>TV</p>-->
                                 </div>
                             </div>
                         </div>
