--- a/pricechecker-frontend/user/authorized/favourites.html
+++ b/pricechecker-frontend/user/authorized/favourites.html
@@ -39,9 +39,10 @@
 					<th>Image</th>
 					<th>Title</th>
 					<th>Description</th>
-					<th>Price</th>
-					<th>Link</th>
-					<th>Action</th>
+					<th style="width: 60px">Price</th>
+					<th style="width: 80px;">E-Shop</th>
+					<th style="width: 60px;">Link</th>
+					<th style="width: 120px;">Action</th>
 				</tr>
 				</thead>
 				<tbody id="favs-tbody">
